--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,5 +78,8 @@ dependencies {
     // Fancy-Toast by Shashank02051997
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
 
+    // MaterialSearchBar by mancj
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
