--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     // ^^^^Maps, Places, Location, Nearby api by google play services
 
+    // geofire by firebase
+    implementation 'com.firebase:geofire-android:2.3.1'
+
     // Fancy-Toast by Shashank02051997
     implementation 'com.github.Shashank02051997:FancyToast-Android:0.1.3'
 
